MyDbAppHelmChart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydbapp
spec:
  selector:
    app: mydbapp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
