MyDbAppHelmChart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-paths
  annotations:
    kubernetes.io/ingress.class: nginx
#    external-dns.alpha.kubernetes.io/hostname: myapp.mydomain.org
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mydbapp
              port:
                number: 5000
